[package]
name = "framegame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
serialport = "4.2.1"

[dev-dependencies]
rand = "0.8.0"
clap = { version = "4.3", features = ["derive"] }

[[example]]
name = "bounce"
path = "examples/bounce.rs"
doc-scrape-examples = true

[[example]]
name = "breakout"
path = "examples/breakout.rs"
doc-scrape-examples = true